--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -584,6 +584,18 @@ header
       padding 35px 20px
       text-align left
       color #fff
+#news
+  padding 30px 0
+  background-color #f5f5f5
+.box-blog-home  
+  h3
+    color #555
+    font-size 18px
+  .box-img-blog
+    background-size cover
+    background-position center
+    background-repeat no-repeat
+    height 200px        
 .box-prod
   background white
   padding 20px 0
@@ -1326,20 +1338,30 @@ header
     &form-control:focus
       border-color none !important
 /************** footer area css ******************/
+#footer-top
+  padding 50px 0
 footer
-  background-color cablack
+  background-color #106A9D
   padding 30px 0
+  .divider-white
+    border-color white
+  .white
+    color white  
+  .payment-type.contact-sty i
+    color white
+    padding-left 4px 
+    font-size 22px 
   .contact-sty
     h3
       color white
       padding-bottom 5px
       font-size 18
-      border-bottom 2px solid #ccc
+      border-bottom 1px solid white
     .list
       a
-        color #ccc
+        color white
         &:hover
-          color cagreen
+          color white
           transition all .25s ease-in-out
 
     .download-app > i
