--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -72,19 +72,18 @@
     </div>
 </section>
 
-<section class="register">
+<section id="news">
     <div class="container">
-        <div class="row">
-            <div class="col-md-7">
-                <div class="reg-content">
-                    <h2 class="reg-descrip">Acude a nuestros cursos, talleres y asesorías
-                        para la utilización del producto que adquiriste con
-                        nosotros. Para nosotros es importante atender todas tus necesidades.</h2>
-
-                    <h4 class="reg-q"><a href="">¿Cómo registrarme y acudir a los cursos?</a></h4>
-                    <button class="btn btn-success btn-lg btn-reg">Más información</button>
+        <h3 class="text-center">
+            Noticias
+        </h3>
+        <div class="col-sm-3">
+            <div class="box-blog-home">
+                <div class="box-img-bg"></div>
+                <div class="box-title">
+                    <h3>Lorem impsum</h3>
                 </div>
-
+                <a href="#" class="btn-orange btn-block">Leer más <i class="fa fa-angle-right pull-right"></i></a>
             </div>
         </div>
     </div>
