--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,5 +1,21 @@
-<div class="container">
-    <div class="col-sm-4 contact-sty">
+<div id="footer-top" class="container">
+    <div class="col-sm-3 contact-sty">
+        <h3>
+            Información
+        </h3>
+        <ul class="list">
+            <li ng-repeat="option in footerNavMenuConact"><a href="{{option.link}}">{{option.name}}</a></li>
+        </ul>
+    </div>
+    <div class="col-sm-3 contact-sty">
+        <h3>
+            Ayuda
+        </h3>
+        <ul class="list">
+            <li ng-repeat="option in contactHelp"><a href="{{option.link}}">{{option.name}}</a></li>
+        </ul>
+    </div>
+    <div class="col-sm-3 contact-sty">
         <h3>Contáctanos</h3>
         <ul class="list">
             <li ng-repeat="post in contactMenuData">
@@ -8,21 +24,18 @@
             </li>
         </ul>
     </div>
-    <div class="col-sm-4 contact-sty">
-        <h3>
-            Acerca de Corriente Alterna
-        </h3>
-        <ul class="list">
-            <li ng-repeat="option in footerNavMenuConact"><a href="{{option.link}}">{{option.name}}</a></li>
-        </ul>
+    <div class="col-sm-3 contact-sty payment-type">
+        <h3>Formas de pago</h3> 
+        <i class="fa fa-cc-amex" aria-hidden="true"></i>
+        <i class="fa fa-cc-discover" aria-hidden="true"></i>
+        <i class="fa fa-cc-paypal" aria-hidden="true"></i>
+        <i class="fa fa-cc-visa" aria-hidden="true"></i>
+
     </div>
-    <div class="col-sm-4 contact-sty">
-        <h3>
-            Ayuda
-        </h3>
-        <ul class="list">
-            <li ng-repeat="option in contactHelp"><a href="{{option.link}}">{{option.name}}</a></li>
-        </ul>
-    </div>
+    
+</div>
+<hr class="divider-white">
+<div class="text-center">
+    <p class="white">© 2017 Moons</p>
 </div>
 
