--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -148,7 +148,7 @@
                                     <div class="col-md-12">
                                         <p>Haz click en el boton "Finalizar compra", para obtener el número de cuenta.
                                             Después de realizar el depósito, por favor ponte en contacto
-                                            con Corriente Alterna para finalizar su compra y realizar el envío.</p>
+                                            con Moons Aquariums para finalizar su compra y realizar el envío.</p>
                                     </div>
                                     <button ng-if="Payment.depositBank" class="btn btn-cart" ng-click="Payment.createOrder()">Finalizar compra</button>
                                 </div>
