--- a/app/templates/shop/partials/purchase-completed.html
+++ b/app/templates/shop/partials/purchase-completed.html
@@ -1,6 +1,6 @@
 <div id="content-area">
     <div class="container">
-        <h1>Gracias por tu compra en corriente alterna.</h1>
+        <h1>Gracias por tu compra en Moons Aquariums.</h1>
 
         <p>Te enviamos un correo a correo@correo.com, con los datos para el deposito</p>
 
