change button colors

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1341,7 +1341,7 @@ header
 #footer-top
   padding 50px 0
 footer
-  background-color #106A9D
+  background-color #1887ce
   padding 30px 0
   .divider-white
     border-color white
