--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -97,7 +97,7 @@
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-xs-12">
-                                                            <button ng-disabled="Form.$invalid" class="subscribe btn btn-cart btn-lg btn-block"
+                                                            <button ng-disabled="Form.$invalid" class="subscribe btn btn-blue btn-lg btn-block"
                                                                     type="submit">Procesar Pago
                                                             </button>
                                                         </div>
@@ -150,7 +150,7 @@
                                             Después de realizar el depósito, por favor ponte en contacto
                                             con Moons Aquariums para finalizar su compra y realizar el envío.</p>
                                     </div>
-                                    <button ng-if="Payment.depositBank" class="btn btn-cart" ng-click="Payment.createOrder()">Finalizar compra</button>
+                                    <button ng-if="Payment.depositBank" class="btn btn-blue" ng-click="Payment.createOrder()">Finalizar compra</button>
                                 </div>
                             </div>
                         </div>
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="col-md-12 text-center" style="margin-top: 20px">
-                <div class="col-md-6"><button ui-sref="shipping-address" class="btn btn-cart">Volver a dirección de envío</button></div>
+                <div class="col-md-6"><button ui-sref="shipping-address" class="btn btn-blue">Volver a dirección de envío</button></div>
                 <div class="col-md-6">
                     <!--<button ng-if="Payment.depositBank" class="btn btn-cart" ui-sref="checkout">Finalizar compra</button>-->
                 </div>
