--- a/app/templates/shop/partials/purchase-completed.html
+++ b/app/templates/shop/partials/purchase-completed.html
@@ -4,7 +4,7 @@
             <h2 class="text-center">{{ Purchase.purchase.customerName }}</h2>
             <hr>
             <div class="col-md-6">
-                <p class="text-left">Gracias por tu compra en Corriente Alterna:),
+                <p class="text-left">Gracias por tu compra en Moon's Aquariums :),
                     Te enviamos un correo a {{ Purchase.purchase.customerEmail }},
                     con los datos para el deposito</p>
             </div>
