--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -10,12 +10,12 @@
         <div class="row" ng-if="ShopCart.items.length>0">
             <div class="col-sm-3 col-md-2 pull-right text-right">
                 <div class="clear-cart">
-                    <button class="btn btn-outline-red" ng-click="ShopCart.clearCart()">Vaciar Carrito</button>
+                    <button class="btn btn-gray-clear" ng-click="ShopCart.clearCart()">Vaciar Carrito</button>
                 </div>
             </div>
             <div class="col-sm-3 col-md-2 pull-right">
                 <div class="clear-cart">
-                    <button class="btn btn-outline-red" ui-sref="products">Seguir comprando</button>
+                    <button class="btn btn-gray-clear" ui-sref="products">Seguir comprando</button>
                 </div>
             </div>
         </div>
@@ -76,8 +76,8 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <a class="btn btn-success btn-cart btn-block" ng-click="ShopCart.processPurchase()"><i class="fa fa-credit-card"></i> Procesar compra</a>
-                        <a class="btn btn-success btn-paypal btn-block"><i class="fa fa-paypal"></i> Pagar con Paypal</a>
+                        <a class="btn btn-success btn-blue btn-block" ng-click="ShopCart.processPurchase()"><i class="fa fa-credit-card"></i> Procesar compra</a>
+                        <!--<a class="btn btn-success btn-paypal btn-block"><i class="fa fa-paypal"></i> Pagar con Paypal</a>-->
                     </div>
                 </div>
             </div>
