--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -267,7 +267,7 @@ header
     .navbar-nav > li > a
       color catext
       padding 22px 20px
-      font-size 18px
+      font-size 16px
       font-family 'Poppins', sans-serif
       font-weight 300
       -webkit-transition all ease-in-out .35s
@@ -275,7 +275,7 @@ header
       transition all ease-in-out .35s
     .navbar-nav > li > a
       &:first-child
-        padding 22px 35px 10px 0px  
+        padding 22px 25px 10px 0px  
     .navbar-nav > li > a:hover, .navbar-nav > li > a:focus
       background-color transparent
       color cagreen
@@ -591,7 +591,9 @@ header
   h3
     color #555
     font-size 18px
-  .box-img-blog
+    margin 15px 0
+    height 50px
+  .box-img-bg
     background-size cover
     background-position center
     background-repeat no-repeat
@@ -602,7 +604,7 @@ header
   .img-prod
     padding-bottom 15px
   .box-container
-    height 80px !important
+    height 100px !important
     p
       font-size 16px
   .prod-descrip
@@ -624,7 +626,7 @@ header
     .img-prod
       padding-bottom 15px
     .box-container
-      height 80px !important
+      height 100px !important
       p
         font-size 16px
     .prod-descrip
@@ -728,7 +730,7 @@ header
     .detail-slide
       margin-bottom 25px
   .detail-price
-    text-align right
+    text-align left
   .prod-detail-descrip
     p
       font-size 18px
@@ -742,6 +744,10 @@ header
     padding 10px 6% 0
     a
       color #f5f5f5
+.content-blog      
+  padding 55px 25px 70px !important
+  .breadcrumb
+    padding  15px 0 15px !important
 #product-detail
   margin 100px 0
   .title-detail
@@ -1443,7 +1449,7 @@ footer
   border-color #919191
 
 .btn
-  font-size 18px
+  font-size 16px
 /* buttons sizes */
 .btn-outline-red
   color #d9534f
