--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -1,21 +1,23 @@
-<div class="header-title">
-    <h2 class="title text-center">{{ Post.detail.title }}</h2>
-</div>
-<!--<div id="breadcrumb">
-    <div class="container">
-        <ol class="breadcrumb">
-            <li><a ui-sref="home"><i class="fa fa-angle-left"></i> Regresar a inicio</a></li>
-            <li ng-if="Post.detail.categories.length"><a
-                    ui-sref="category({slug: Post.detail.categories[0].slug })">{{ Post.detail.categories[0].name }}</a>
-            </li>
-            <li class="active">{{ Post.detail.title }}</li>
-        </ol>
-    </div>
-</div>-->
 <section id="content-area" class="content-blog">
+    <div id="breadcrumb">
+        <div class="container">
+            <ol class="breadcrumb">
+                <li><a ui-sref="home"><i class="fa fa-angle-left"></i> Regresar a inicio</a></li>
+                <li ng-if="Post.detail.categories.length"><a
+                        ui-sref="category({slug: Post.detail.categories[0].slug })">{{ Post.detail.categories[0].name }}</a>
+                </li>
+                <li class="active">{{ Post.detail.title }}</li>
+            </ol>
+            <hr>
+        </div>
+    </div>
+    
     <div class="container">
         <div class="row">
             <div class="col-md-9 col-sm-8">
+                <h3>{{ Post.detail.title }}</h3>
+                <hr>
+
                 <div class="content-post">
                     <div ng-if="!Post.isService">
                         <img ng-if="Post.detail.urlImages.medium" ng-src="{{ Post.detail.urlImages.medium }}"
