--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -58,6 +58,7 @@
                                     <button class="btn btn-orange btn-block"
                                     ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
                                     ng-disabled="Shop.itemInCart(product)">Agregar</button>
+                                </div>
                             </div>
                         </div>
 
