--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -64,9 +64,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-3">
+        <!--<div class="col-sm-3">
             <h3>Twitter here</h3>
-        </div>
+        </div>-->
     </div>
     </div>
 </section>
