--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -17,7 +17,7 @@
                             </a>
                             <a ng-click="Product.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
                                ng-disabled="Product.itemInCart(product)"
-                               class="btn btn-success btn-cart">Agregar al Carrito</a>
+                               class="btn btn-blue">Agregar al Carrito</a>
                         </div>
                         <div class="box-prod" ng-if="Product.isPost">
                             <a ui-sref="post_detail({slug:product.slug})">
