ajuste de estilo

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -88,7 +88,7 @@ body
   height 20px
   background-color #ccc
 .content
-  margin-top 200px
+  margin-top 235px
 .content-post
   margin 20px 0
   article
@@ -489,7 +489,7 @@ header
   background-color #fff    
 #content-area
   margin 0
-  padding 100px 25px 70px
+  padding 50px 25px 70px
   .title-category
     text-align left
     color #746857
@@ -587,6 +587,10 @@ header
 #news
   padding 30px 0
   background-color #f5f5f5
+
+.title
+  color #777  
+
 .box-blog-home  
   h3
     color #555
@@ -599,8 +603,9 @@ header
     background-repeat no-repeat
     height 200px        
 .box-prod
-  background white
+  background transparent
   padding 20px 0
+  margin-bottom 20px
   .img-prod
     padding-bottom 15px
   .box-container
