--- a/app/css/main.css
+++ b/app/css/main.css
@@ -82,7 +82,7 @@ body {
   background-color: #ccc;
 }
 .content {
-  margin-top: 200px;
+  margin-top: 235px;
 }
 .content-post {
   margin: 20px 0;
@@ -566,7 +566,7 @@ header {
 }
 #content-area {
   margin: 0;
-  padding: 100px 25px 70px;
+  padding: 50px 25px 70px;
 }
 #content-area .title-category {
   text-align: left;
@@ -688,6 +688,9 @@ header {
   padding: 30px 0;
   background-color: #f5f5f5;
 }
+.title {
+  color: #777;
+}
 .box-blog-home h3 {
   color: #555;
   font-size: 18px;
@@ -701,8 +704,9 @@ header {
   height: 200px;
 }
 .box-prod {
-  background: #fff;
+  background: transparent;
   padding: 20px 0;
+  margin-bottom: 20px;
 }
 .box-prod .img-prod {
   padding-bottom: 15px;
