--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -1,13 +1,28 @@
-<div class="header-title">
-    <h2 class="title text-center">Productos</h2>
-</div>
 <section id="content-area">
     <div class="row">
         <div class="col-md-12 content-pages" infinite-scroll='Product.getMorePosts()'
              infinite-scroll-disabled='Product.busy || !Product.next || Product.loadProducts'>
             <div class="container">
+                <h2 class="title">Nuestros productos</h2>
+                <hr>
                 <div class="row text-center" ng-if="ecommerce">
-                    <div class="col-sm-4" ng-repeat="entry in Product.list">
+                    <div class="col-sm-3" ng-repeat="entry in Product.list">
+                        <div class="box-prod">
+                            <a ui-sref="product-detail({slug:entry.slug})" title="Ver detalles del producto">
+                                <div class="bg-prod" style="background-image: url('{{entry.featuredImage.url ? entry.featuredImage.url : initConfig.img_default}}')"></div>
+                            </a>
+                            <div class="box-container no-padding container-fluid" style="height: 30px !important;">
+                                <div class="col-sm-12 no-pd-l text-center">
+                                    <br>
+                                    <h5>{{entry.name}}</h5>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="container-fluid no-padding">
+                                <a class="btn btn-orange btn-block"  ui-sref="product-detail({slug:entry.slug})">Ver más</a>
+                            </div>
+                        </div>
+                        <!--
                         <div class="box-prod">
                             <a ui-sref="category({slug:entry.slug})">
                                 <div class="bg-prod"
@@ -18,6 +33,7 @@
                             </a>
                             <a ui-sref="category({slug:entry.slug})" class="btn btn-success btn-cart">Ver Productos</a>
                         </div>
+                        -->
                     </div>
                 </div>
                 <!--<div class="row text-center">
