--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -9,6 +9,7 @@
         </ol>
     </div>
 </div>
+<hr class="no-margin">
 <section id="content-area" class="content-blog product-detail" ng-controller="ShoppingCtrl as Shop">
     <div class="col-sm-4">
          <div id="carouse-principal" class="carousel slide" style="margin-bottom: 25px">
