--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -267,7 +267,7 @@ header
     .navbar-nav > li > a
       color catext
       padding 22px 20px
-      font-size 16px
+      font-size 18px
       font-family 'Poppins', sans-serif
       font-weight 300
       -webkit-transition all ease-in-out .35s
@@ -406,6 +406,8 @@ header
   display none
 .carousel-indicators
   display none*/
+.no-margin
+  margin 0  
 .carousel-caption
   top 20%
   padding 30px 60px
@@ -585,7 +587,7 @@ header
       text-align left
       color #fff
 #news
-  padding 30px 0
+  padding 60px 0
   background-color #f5f5f5
 
 .title
@@ -612,6 +614,7 @@ header
     height 100px !important
     p
       font-size 16px
+      margin 15px 0
   .prod-descrip
     color #717171
     height 65px
@@ -1200,7 +1203,7 @@ header
       font-weight bold
       color #999
 #breadcrumb
-  background-color #f5f5f5
+  background-color #eee
   border-bottom 1px solid #f5f5f5
   .breadcrumb
     padding 15px 15px
@@ -1961,9 +1964,9 @@ footer
   width 100%
   height 100%
   opacity 1
-  background rgba(255, 255, 255, 0.8) /* fallback for old browsers */
-  background -webkit-linear-gradient(to left, rgba(255, 255, 255, 0.8) , rgba(255, 255, 255, 0.8)) /* Chrome 10-25, Safari 5.1-6 */
-  background linear-gradient(to left, rgba(255, 255, 255, 0.8) , rgba(255, 255, 255, 0.8)) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #56CCF2;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 
 .block-ui-message
