--- a/app/css/main.css
+++ b/app/css/main.css
@@ -299,7 +299,7 @@ header {
 .header .navbar-default .navbar-nav > li > a {
   color: #565656;
   padding: 22px 20px;
-  font-size: 16px;
+  font-size: 18px;
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
   -webkit-transition: all ease-in-out 0.35s;
@@ -467,6 +467,9 @@ header {
 }
 .carousel-inner {
   background-color: transparent;
+}
+.no-margin {
+  margin: 0;
 }
 .carousel-caption {
   top: 20%;
@@ -685,7 +688,7 @@ header {
   color: #fff;
 }
 #news {
-  padding: 30px 0;
+  padding: 60px 0;
   background-color: #f5f5f5;
 }
 .title {
@@ -716,6 +719,7 @@ header {
 }
 .box-prod .box-container p {
   font-size: 16px;
+  margin: 15px 0;
 }
 .box-prod .prod-descrip {
   color: #717171;
@@ -1434,7 +1438,7 @@ color
   color: #999;
 }
 #breadcrumb {
-  background-color: #f5f5f5;
+  background-color: #eee;
   border-bottom: 1px solid #f5f5f5;
 }
 #breadcrumb .breadcrumb {
@@ -2322,9 +2326,9 @@ footer .contact-sty .download-app > i:hover {
   width: 100%;
   height: 100%;
   opacity: 1;
-  background: rgba(255,255,255,0.8) /* fallback for old browsers */;
-  background: -webkit-linear-gradient(to left, rgba(255,255,255,0.8), rgba(255,255,255,0.8)) /* Chrome 10-25, Safari 5.1-6 */;
-  background: linear-gradient(to left, rgba(255,255,255,0.8), rgba(255,255,255,0.8)) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */;
+  background: #56ccf2; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2f80ed, #56ccf2); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2f80ed, #56ccf2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .block-ui-message {
   background: transparent;
