--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -8,18 +8,18 @@
                 <div class="row text-center" ng-if="ecommerce">
                     <div class="col-sm-3" ng-repeat="entry in Product.list">
                         <div class="box-prod">
-                            <a ui-sref="product-detail({slug:entry.slug})" title="Ver detalles del producto">
+                            <a ui-sref="category({slug:entry.slug})" title="Ver detalles del producto">
                                 <div class="bg-prod" style="background-image: url('{{entry.featuredImage.url ? entry.featuredImage.url : initConfig.img_default}}')"></div>
                             </a>
                             <div class="box-container no-padding container-fluid" style="height: 30px !important;">
                                 <div class="col-sm-12 no-pd-l text-center">
                                     <br>
-                                    <h5>{{entry.name}}</h5>
+                                    <h4>{{entry.name}}</h4>
                                 </div>
                             </div>
                             <hr>
                             <div class="container-fluid no-padding">
-                                <a class="btn btn-orange btn-block"  ui-sref="product-detail({slug:entry.slug})">Ver más</a>
+                                <a class="btn btn-orange btn-block"  ui-sref="category({slug:entry.slug})">Ver más</a>
                             </div>
                         </div>
                         <!--
