--- a/app/templates/auth/partials/validate_account.html
+++ b/app/templates/auth/partials/validate_account.html
@@ -5,9 +5,9 @@
             <p class="send-email">Hemos enviado a tu correo electrónico un código de verificación.
                 Por favor ingresa a tu correo para activar tu cuenta <br>
             ¿Ya has validado tu cuenta?</p>
-            <a ui-sref="register" class="btn btn-outline-red">Ingresa</a>
+            <a ui-sref="register" class="btn btn-gray-clear">Ingresa</a>
             <br><br>
-            <img src="../../../img/corriente-alterna-logo.png" alt="">
+            <img src="../../../img/logo.jpg" alt="" width="150">
         </div>
     </div>
 </section>
