--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -10,7 +10,7 @@
     </div>
 </div>
 <hr class="no-margin">
-<section id="content-area" class="content-blog product-detail" ng-controller="ShoppingCtrl as Shop">
+<section id="content-area" class="content-blog product-detail container" ng-controller="ShoppingCtrl as Shop">
     <div class="col-sm-4">
          <div id="carouse-principal" class="carousel slide" style="margin-bottom: 25px">
             <!-- Wrapper for slides -->
@@ -18,7 +18,7 @@
                 <uib-carousel interval="5000" template-url="/templates/partials/carousel.html">
                     <uib-slide ng-repeat="slide in Product.detail.attachments">
                         <a post-link="{ link: {url: slide.link, target: '_self'} }">
-                            <div class="detail-img" style="background-image:url('{{ slide.url }}');"></div>
+                            <div class="detail-img" style="background-image:url('{{slide.url ? slide.url : initConfig.img_default}} ');"></div>
                         </a>
                     </uib-slide>
                 </uib-carousel>
