fix another error

--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div ng-if="ShopCart.items.length==0" class="text-center">
             <h3 class="info"><i class="fa fa-warning"></i> No se han agregado productos al carrito</h3>
-            <a class="btn btn-outline-red" ui-sref="products">Ver productos</a>
+            <a class="btn btn-orange" ui-sref="products">Ver productos</a>
         </div>
         <div class="row" ng-if="ShopCart.items.length>0">
             <div class="col-sm-3 col-md-2 pull-right text-right">
