--- a/app/templates/auth/address-new.html
+++ b/app/templates/auth/address-new.html
@@ -103,12 +103,12 @@
 
                         </div>
                         <div class="col-md-12 text-center" style="padding-top: 30px;">
-                            <button type="submit" class="btn btn-outline-red"
+                            <button type="submit" class="btn btn-blue"
                                     ng-disabled="Address.busy">
                                 <i class="ion-android-done"></i> Guardar <span ng-if="Address.busy"><i
                                     class="fa fa-spinner fa-spin"></i></span>
                             </button>
-                            <button class="btn btn-outline-red" ui-sref="address">Cancelar</button>
+                            <button class="btn btn-blue" ui-sref="address">Cancelar</button>
                         </div>
                     </form>
                 </div>
