--- a/app/templates/auth/account-profile.html
+++ b/app/templates/auth/account-profile.html
@@ -93,7 +93,7 @@
                             </div>
 
                             <div class="col-sm-6 text-right" style="padding-top: 30px;">
-                                <button type="submit" class="btn btn-outline-red"
+                                <button type="submit" class="btn btn-blue"
                                         ng-disabled="Profile.busy">
                                     Guardar cambios <span ng-if="Profile.busy"><i
                                         class="fa fa-spinner fa-spin"></i></span>
