--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1748,10 +1748,10 @@ footer
     color #FFA500
 /******** Form section *************/
 .list-group-item.active, .list-group-item.active:hover
-    color #aa261d
+    color #1887ce
     background-color transparent
 .list-group-item.active:focus
-    background-color #aa261d 
+    background-color #1887ce
     color white
 .search-prd
   margin-top 0
