--- a/app/templates/auth/addresses.html
+++ b/app/templates/auth/addresses.html
@@ -24,7 +24,7 @@
                     </form>
                 </div>
                 <div class="col-xs-6 col-sm-6 text-right">
-                    <button title="Agregar nueva dirección" ui-sref="address-add" class="btn btn-gray-clear-sm btn-xs"><i class="ion-ios-plus-empty"></i>
+                    <button title="Agregar nueva dirección" ui-sref="address-add" class="btn btn-gray-clear"><i class="ion-ios-plus-empty"></i>
                     Agregar dirección</button>
                 </div>
             </div>
