--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -22,8 +22,8 @@
                         </div>
                         <div class="col-xs-6 no-pd-r">
                             <button class="btn btn-orange btn-block"
-                            ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
-                            ng-disabled="Shop.itemInCart(product)">Agregar</button>
+                            ng-click="Product.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
+                            ng-disabled="Product.itemInCart(product)">Agregar</button>
                         </div>
                     </div>
                 </div>
