--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -235,8 +235,10 @@ body
   padding-bottom 0
   padding-right 45px
   margin-top 8px
+  color #1887CE
 .nav-user.nav > li > .shopping-cart i 
   font-size 40px
+  color #1887CE
 header
   width 100%
   position absolute
@@ -306,7 +308,9 @@ header
   color #d2b770 !important
   text-align left
 /* home */
-
+#section-promo
+  background-color white
+  padding 30px 0
 #security
   text-align center
   background #f5f5f5
@@ -314,10 +318,7 @@ header
   p
     font-size 22px
     font-weight bold
-    color #aaaaaa
-#section-prom
-  margin-top 60px
-  margin-bottom 40px    
+    color #aaaaaa   
 #us
   padding 60px 0
   background-size cover
@@ -1354,12 +1355,14 @@ header
       border-color none !important
 /************** footer area css ******************/
 #footer-top
-  padding 50px 0
-footer
+  padding 80px 0 
+  background-image: url(../img/bg-contact.jpg);
+  background-size: cover;
+  background-position: center;
+.bottom-footer
   background-color #1887ce
-  padding 30px 0
-  .divider-white
-    border-color white
+  padding 30px 0  
+footer
   .white
     color white  
   .payment-type.contact-sty i
