--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,41 +1,44 @@
-<div id="footer-top" class="container">
-    <div class="col-sm-3 contact-sty">
-        <h3>
-            Información
-        </h3>
-        <ul class="list">
-            <li ng-repeat="option in footerNavMenuConact"><a href="{{option.link}}">{{option.name}}</a></li>
-        </ul>
-    </div>
-    <div class="col-sm-3 contact-sty">
-        <h3>
-            Ayuda
-        </h3>
-        <ul class="list">
-            <li ng-repeat="option in contactHelp"><a href="{{option.link}}">{{option.name}}</a></li>
-        </ul>
-    </div>
-    <div class="col-sm-3 contact-sty">
-        <h3>Contáctanos</h3>
-        <ul class="list">
-            <li ng-repeat="post in contactMenuData">
-                <a class="contact-foo-side" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i> <span
-                        ng-bind-html="post.content | trustHtml"></span></a>
-            </li>
-        </ul>
-    </div>
-    <div class="col-sm-3 contact-sty payment-type">
-        <h3>Formas de pago</h3> 
-        <i class="fa fa-cc-amex" aria-hidden="true"></i>
-        <i class="fa fa-cc-discover" aria-hidden="true"></i>
-        <i class="fa fa-cc-paypal" aria-hidden="true"></i>
-        <i class="fa fa-cc-visa" aria-hidden="true"></i>
+<div id="footer-top" style="background-image: url('../img/bg-contact.jpg')">
+    <div class="container">
+        <div class="col-sm-3 contact-sty">
+            <h3>
+                Información
+            </h3>
+            <ul class="list">
+                <li ng-repeat="option in footerNavMenuConact"><a href="{{option.link}}">{{option.name}}</a></li>
+            </ul>
+        </div>
+        <div class="col-sm-3 contact-sty">
+            <h3>
+                Ayuda
+            </h3>
+            <ul class="list">
+                <li ng-repeat="option in contactHelp"><a href="{{option.link}}">{{option.name}}</a></li>
+            </ul>
+        </div>
+        <div class="col-sm-3 contact-sty">
+            <h3>Contáctanos</h3>
+            <ul class="list">
+                <li ng-repeat="post in contactMenuData">
+                    <a class="contact-foo-side" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i> <span
+                            ng-bind-html="post.content | trustHtml"></span></a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-sm-3 contact-sty payment-type">
+            <h3>Formas de pago</h3> 
+            <i class="fa fa-cc-amex" aria-hidden="true"></i>
+            <i class="fa fa-cc-discover" aria-hidden="true"></i>
+            <i class="fa fa-cc-paypal" aria-hidden="true"></i>
+            <i class="fa fa-cc-visa" aria-hidden="true"></i>
 
-    </div>
+        </div>
+    </div>    
+</div>
+<div class="text-center bottom-footer">
+    <p class="white">© 2017 Moons, Todos los Derechos Reservados. <br>
+Tienda Moons Mixhuca: Rio Frío #174 Col. Magdalena Mixhuca, <br>Delegacion Venustiano Carranza, C.P. 15850, CDMX.</p>
+</div>
+
     
-</div>
-<hr class="divider-white">
-<div class="text-center">
-    <p class="white">© 2017 Moons</p>
-</div>
 
