--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1575,6 +1575,7 @@ footer
   background #FF7300
   display inline-block
   padding 10px 15px
+  text-align center
   color white !important
   font-weight 300
   border 1px solid #FF7300
