--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -36,10 +36,10 @@
                     en el hogar para nuestros animales de compañía.</p>
             </div>
         </div>
-        <div class="col-sm-12">
+        <div class="col-sm-9">
             <div class="box-products" ng-controller="ShoppingCtrl as Shop">
                 <div class="row text-center">
-                    <div class="col-sm-3" ng-repeat="product in Home.products">
+                    <div class="col-sm-4" ng-repeat="product in Home.products">
                         <div class="box-prod">
                             <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
                                 <div class="bg-prod"
@@ -60,7 +60,7 @@
                                 <div class="col-xs-6 no-pd-r">
                                     <button class="btn btn-orange btn-block"
                                             ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
-                                            ng-disabled="Shop.itemInCart(product)">Agregar
+                                            ng-disabled="Shop.itemInCart(product)">Comprar
                                     </button>
                                 </div>
                             </div>
@@ -68,6 +68,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="col-sm-3">
+            <a class="twitter-timeline" href="https://twitter.com/MOONS_AQUARIUMS">Tweets by pollox</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
 </section>
