--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -27,10 +27,12 @@
         </div>
         <div class="col-sm-3 contact-sty payment-type">
             <h3>Formas de pago</h3> 
-            <i class="fa fa-cc-amex" aria-hidden="true"></i>
-            <i class="fa fa-cc-discover" aria-hidden="true"></i>
-            <i class="fa fa-cc-paypal" aria-hidden="true"></i>
-            <i class="fa fa-cc-visa" aria-hidden="true"></i>
+            <i><img src="img/paypal-1.png" alt="Paypal"></i>
+            <i><img src="img/mercado-pago.png" alt="Mercado pago"></i>
+            <i><img src="img/master-card.png" alt="Master card"></i>
+            <i><img src="img/discover.png" alt="Discover"></i>
+            <i><img src="img/american.png" alt="American express"></i>
+             <i><img src="img/oxxo.png" alt="Oxxo"></i>
 
         </div>
     </div>    
