--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,48 +1,45 @@
-<section id="content-area">
-    <div class="container" infinite-scroll='Search.getMorePosts()'
+<section id="content-area" class="content-blog">
+    <div class="content-pages" infinite-scroll='Search.getMorePosts()'
          infinite-scroll-disabled='Search.busy || !Search.next || Search.loadPosts'>
-        <div class="row">
-            <div class="col-md-12 title-post">
-                <h2 class="title">Resultados de la busqueda: {{ Search.searchTerm }}</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 content-pages">
-                <div class="container">
-                    <div class="col-sm-4" ng-repeat="entry in Search.listSearch">
-
-                        <a post-link="{ link: {url: entry.link, target: '_blank'} }"
-                           ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
-                            <div class="box-default">
-                                <div class="box-header" style="background-image: url('{{ entry.urlImages.thumbnails ? entry.urlImages.thumbnails : 'http://localhost:8080/img/img-default.jpg' }}')"></div>
-
-                                <div class="box-container">
-                                    <h3>{{ entry.title | characters:35 }}</h3>
-
-                                    <p>{{ entry.excerpt | characters:50 }}</p>
-                                </div>
-                            </div>
-                        </a>
-
-                    </div>
-                    <div class="col-sm-12 caption-style" ng-show="!Search.busy && Search.loadPostError">
-                        <h4 class="text-center text-danger">Error al cargar el contenido, presione
-                            <a href="#" ng-click="Search.errorRecovery()">aquí</a> para intentar de nuevo</h4>
-                    </div>
-                    <div class="col-sm-12 caption-style" ng-show="!Search.busy && Search.loadPosts">
-                        <div class="pagination center-block">
-                            <a class="more-articles-button" ng-click="Search.getMorePosts()">Cargar mas contenido</a>
+        <div class="container">
+            <h2 class="title">Resultados de la busqueda: {{ Search.searchTerm }}</h2>
+            <hr>
+            <div class="col-sm-3" ng-repeat="item in Search.listSearch">
+                <div class="box-prod" ng-if="!Search.isPost">
+                    <a ui-sref="item-detail({slug:item.slug})" title="Ver detalles del producto">
+                        <div class="bg-prod" style="background-image: url('{{item.featuredImage.url ? item.featuredImage.url : initConfig.img_default}}')"></div>
+                    </a>
+                    <div class="box-container no-padding container-fluid">
+                        <div class="col-sm-12 no-pd-l text-center">
+                            <p>{{item.name}}</p>
+                            <h4>{{ item.price | currency }}</h4>
                         </div>
                     </div>
-                    <div class="col-sm-12 caption-style" ng-show="Search.busy">
-                        <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
-                    </div>
-                    <div class="col-sm-12 caption-style" ng-show="!Search.busy">
-                        <h4 class="text-center" ng-show="!Search.listSearch.length">Lo sentimos no contamos con
-                            contenido para esta categoría</h4>
+                    <hr>
+                    <div class="container-fluid no-padding">
+                        <div class="col-12">
+                            <a class="btn btn-gray-clear btn-block"  ui-sref="product-detail({slug:item.slug})">Ver más</a>
+                        </div>
                     </div>
                 </div>
+
+                <div class="box-prod" ng-if="Search.isPost">
+                    <a ui-sref="post_detail({slug:item.slug})">
+                        <div class="bg-prod"
+                             style="background-image: url('{{item.featuredImage.url ? item.featuredImage.url : initConfig.img_default }}')"></div>
+                        <h3 class="prod-descrip">{{item.title}}</h3>
+                    </a>
+                    <a ui-sref="post_detail({slug: item.slug})" class="btn btn-success btn-cart">Ver más</a>
+                </div>
+            </div>
+            <div class="col-sm-12" ng-show="Search.busy">
+                <h3 class="text-center">Cargando<i class="fa fa-spinner fa-spin"></i></h3>
+            </div>
+            <div class="col-sm-12" ng-show="!Search.busy">
+                <h2 class="text-center no-content" ng-show="!Search.listSearch.length">Lo sentimos no contamos con
+                    contenido disponible</h2>
             </div>
         </div>
+        <!--post list -->
     </div>
 </section>
