more responsive details

--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -236,6 +236,11 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  #section-promo
+    .item-promo
+      text-align center
+  .btn-product-detail
+    text-align center
   .excerpt-shopping
     padding-top 50px
   .shopcart-qty
