--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -163,7 +163,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 cart-detail-ship">
             <ng-include src="'/templates/shop/partials/cart-details.html'"></ng-include>
         </div>
     </div>
