--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2744,6 +2744,12 @@ footer .contact-sty .download-app > i:hover {
   }
 }
 @media only screen and (max-width: 767px) {
+  #section-promo .item-promo {
+    text-align: center;
+  }
+  .btn-product-detail {
+    text-align: center;
+  }
   .excerpt-shopping {
     padding-top: 50px;
   }
