fix menu responsive

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -7,6 +7,8 @@ cagreenh = #7e1a1d
 primary = #555555
 monsyellow = #ffa500
 
+.hide-desk
+  display none
 i 
   vertical-align: middle;
 /************** deafault css******************/
@@ -308,9 +310,14 @@ header
   color #d2b770 !important
   text-align left
 /* home */
+#twitter-styl
+  border 1px solid #eee
+  padding 0
 #section-promo
   background-color white
-  padding 30px 0
+  padding 50px 0
+  border-top 1px solid #eee
+  border-bottom 1px solid #eee
 #security
   text-align center
   background #f5f5f5
@@ -447,10 +454,13 @@ header
     font-size 45px
     color #555
 
+
 /*header info*/
 .navbar-info
+  background-image url('../img/cats-dogs.png')
   padding 0.8em 0 0em
   background-color #fff
+  background-size 215px
   a
     color catext
     font-size 15px
@@ -1489,6 +1499,11 @@ footer
   border-top 1px solid #eee
   border-bottom 1px solid #eee
 
+.btn-blue-clear
+  background-color transparent
+  color #1887CE !important
+  &:hover
+    color #136A9B
 .btn-blue
   background-color #1887CE 
   display inline-block
