--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -120,8 +120,8 @@
   header .navbar-default .navbar-nav > li > a
     font-size 16px
 
-  header .logo
-    width 180px
+  .header .logo
+    width 100px
     padding 25px 14px 0 25px
     margin-top 10px !important
 
@@ -236,6 +236,12 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .hide-desk
+    display inline 
+  .xs-hide
+    display none
+  .nav-user.nav > li > .shopping-cart i
+    font-size 33px
   .excerpt-shopping
     padding-top 50px
   .shopcart-qty
@@ -254,14 +260,15 @@
   .product-info
     height 235px
   .content
-    margin-top 0
+    margin-top 225px 
   .header-title
     height 80px
   .header-title .title 
     color #fff
     font-size 2em
     padding 20px 4px 2px
-  
+  .ca-phone
+    display none
   .services .box-service h3
     text-align center
   .register .reg-content .reg-descrip
@@ -269,7 +276,7 @@
   .shopping-cart
     margin-top 15px
   .navbar-info a, .navbar-info a > i
-    font-size 16px
+    font-size 14px
   .qty-cart
     right 17%
   .navbar-info
@@ -462,15 +469,18 @@
     background rgba(255, 255, 255, 0.9)
   .navbar-nav
     background transparent
-    margin-top 25px
-    border-top 1px solid #f5f5f5
+    margin-top 0
   .fluid-res
     padding 0
   #wrap
     display none
-  header .logo
-    margin-top 10px
-    width 200px
+  .list-social-media 
+    text-align center
+    margin 0
+    padding 0  
+  .header .logo
+    margin-top 5px
+    width 75px
   h2.title-outstanding
     font-size 16px !important
     padding 20px 10px !important
