--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -60,11 +60,12 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-3">
+        <div id="twitter-styl" class="col-sm-3">
             <a class="twitter-timeline" data-height="900" href="https://twitter.com/MOONS_AQUARIUMS">Tweets by MOONS_AQUARIUMS</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
 </section>
+
 <div id="section-promo">
     <div class="container">
         <div class="col-sm-4" ng-repeat="promo in Home.promoHome">
