fix responsive tablet

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -9,6 +9,8 @@ monsyellow = #ffa500
 
 .hide-desk
   display none
+.hide-tablet
+  display none  
 i 
   vertical-align: middle;
 /************** deafault css******************/
