--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -66,6 +66,8 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px)
+  .shopcart-qty > input
+    margin 0 auto
   .btn-sm
     padding 5px 5px !important
     font-size 14px !important
@@ -255,6 +257,8 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .shopcart-qty > input
+    margin 0 auto
   .hide-tablet
     display none
   .hide-desk
