--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -4,7 +4,7 @@
         <div class="container">
             <h2 class="title">{{Product.categoryName}}</h2>
             <hr> 
-            <div class="col-sm-3" ng-repeat="product in Product.list">
+            <div class="col-sm-6 col-md-3" ng-repeat="product in Product.list">
                 <div class="box-prod" ng-if="!Product.isPost">
                     <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
                         <div class="bg-prod" style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
