responsive details in account

--- a/app/templates/auth/history-sales.html
+++ b/app/templates/auth/history-sales.html
@@ -3,12 +3,12 @@
         <div class="col-md-3">
             <ng-include src="'/templates/auth/partials/my-account-items.html'"></ng-include>
         </div>
-        <div class="col-xs-9 col-md-9">
+        <div class="col-xs-12 col-md-9">
             <div class="row">
-                <div class="col-md-6 col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6">
                     <h3 class="info2"><i class="ion-bag"></i> Historial de compras</h3>
                 </div>
-                <div class="col-md-6 col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6">
                     <form name="Sale.searchForm" ng-submit="Sale.globalSearch()" class="ca-form">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Buscar" name="searchTerm"
