--- a/app/templates/auth/addresses.html
+++ b/app/templates/auth/addresses.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-xs-12 col-md-9">
             <div class="row">
-                <div class="col col-xs-6">
+                <div class="col-xs-12 col-md-6">
                     <h3 class="info2"><i class="ion-ios-list"></i> Lista de direcciones</h3>
                 </div>
             </div>
