--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,6 +1,6 @@
 <section id="content-area">
     <div class="container">
-        <div class="col-sm-6 col-sm-offset-3">
+        <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
             <uib-tabset active="activeJustified" justified="true">
                 <uib-tab index="0" heading="Iniciar sesión">
                     <form class="padding" name="loginForm" novalidate ng-submit="Access.login()">
