remove mercadopago and disablepaypal paymentMethod

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1326,6 +1326,9 @@ header
   padding 20px
 
 /*PROFILE*/
+.panel-title > label > a
+  cursor pointer
+  color #555
 .panel-title > span > label
   cursor pointer
   font-family 'Poppins', sans-serif
