--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -116,7 +116,7 @@
                                 <input disabled type="radio" value="3" id="paypal" ng-click="Payment.paypal=!Payment.paypal"
                                        name="paymentType" ng-model="Payment.orderPaymentType">
                                 <span class="fa fa-paypal">
-                                    <label for="paypal">Pago con Paypal</label>
+                                    <label for="paypal" ng-click="Payment.paypal=!Payment.paypal">Pago con paypal</label>
                                 </span>
                             </h4>
                         </div>
@@ -126,6 +126,7 @@
                                     <div class="col-md-12">
                                         <!--<p>Luego de hacer clic en "Finalizar el pedido", serás
                                             redirigido a PayPal para completar tu compra de forma segura.</p>-->
+                                        <img src="../../img/paypall.png" alt="" width="200">
                                         <p>Proximamente, pordrá realizar su pago, con la facilidad de Paypal.</p>
                                     </div>
                                     <!--<button ng-if="Payment.paypal" class="btn btn-cart" ui-sref="checkout">Finalizar el pedido</button>-->
