--- a/app/templates/shop/partials/cart-details.html
+++ b/app/templates/shop/partials/cart-details.html
@@ -1,3 +1,6 @@
+<div class="col-md-12 text-center">
+    <h3><i class="ion-ios-cart-outline"></i> Resumen de tu pedido</h3>
+</div>
 <div class="col-md-12 text-center" ng-repeat="item in Payment.items">
     <div class="col-md-6">
         <img ng-src="{{item.image}}" alt="" width="100">
