--- a/app/templates/shop/shipping.html
+++ b/app/templates/shop/shipping.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="col-md-6 address-form">
             <div class="col-md-12 select-address" style="margin-bottom: 20px">
-                <h3><i class="ion-ios-location-outline"></i></a> Seleccionar dirección existente</h3>
+                <h3><i class="ion-ios-location-outline"></i> Seleccionar dirección existente</h3>
                 <ng-include src="'/templates/shop/shipping-address.html'"></ng-include>
             </div>
             <hr class="clearfix">
